fix missing nav collapse icon

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,12 +82,6 @@ nav .active{
     background-color: rgb(165, 165, 165);
 }
 
-.carousel-control-prev-icon
-{
-    background-color: rgb(41, 41, 41);
-    border-radius: 10px;
-}
-
 .carousel-control-next-icon
 {
     background-color: rgb(41, 41, 41);
@@ -107,4 +101,12 @@ nav .active{
 .profile-work-logo{
     height: 50px;
     width: 50px;
+}
+
+.navbar-toggler{
+    padding-top:  7px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(199, 198, 198);
+    border-radius: 5px;
 }
